--- a/formulario.html
+++ b/formulario.html
@@ -67,7 +67,7 @@
     <label for="apostador">Nombre del Apostador:</label>
     <select id="apostador" name="apostador" required>
       <option value="" disabled selected>Seleccionar Apostador</option>
-      <option value="guillermo_larrazabal">Guillermo Larrazábal</option>
+      <option value="guillermo_larrazaba">Guillermo Larrazába</option>
       <option value="juan_soto">Juan Soto</option>
       <option value="santiago_silva">Santiago Silva</option>
       <option value="gabito">Gabito</option>
@@ -150,3 +150,4 @@
 
 </body>
 </html>
+
